finished install and added some stuff ot the package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "new-mern-mar17",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "backend/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,9 +9,9 @@
   },
   "type": "module",
   "keywords": [],
-  "author": "",
+  "author": "HeatherEllen Strain",
   "license": "ISC",
-  "description": "",
+  "description": "testing users and auth and stuff",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
