--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "new-mern-mar17",
-  "version": "1.0.1",
+  "name": "mern-users",
+  "version": "2.0.0",
+  "description": "testing mern users for the w33d gummy site",
+  "type": "module",
   "main": "backend/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon backend/index.js",
     "dev": "nodemon backend/index.js"
   },
-  "type": "module",
   "keywords": [],
   "author": "HeatherEllen Strain",
   "license": "ISC",
-  "description": "testing users and auth and stuff",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
-    "nodemon": "^3.1.9",
-    "resend": "^4.1.2"
+    "mongoose": "^8.8.2",
+    "resend": "^4.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
