--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
-    "resend": "^4.0.1"
+    "resend": "^4.0.1",
+    "vite": "^6.2.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
