i gotta stop making a whole new file to fix my code but it works

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "mern-users",
-  "version": "2.0.0",
-  "description": "testing mern users for the w33d gummy site",
+  "name": "mern-youtube-tutorial",
+  "version": "1.0.0",
+  "description": "",
   "type": "module",
   "main": "backend/index.js",
   "scripts": {
     "dev": "nodemon backend/index.js"
   },
   "keywords": [],
-  "author": "HeatherEllen Strain",
+  "author": "Brett Westwood",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -19,8 +19,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
-    "resend": "^4.0.1",
-    "vite": "^6.2.2"
+    "resend": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
